# OptiRocket

./: .gitignore  LICENSE  README.md  SchoolProject.md  User Guide.md  UserGuide.md  main.py  mission1.py  mission2.py  mission5.py  pyproject.toml  test_OptiRocket.py  workinprogress.py
missions/: mission3.py  mission4.py
optirocket/: __init__.py  mainscript.py  optirocket.py  workinprogress.py
optirocket/missions/: GEOsat.json  GEOsat.py  ISScargo.json  ISScargo.py  LEOsat.json  LEOsat.py  POLARsat.json  POLARsat.py  SSOsat.json  SSOsat.py
tests/: test_OptiRocket.py
