[tool.poetry]
name = "optirocket"
version = "0.1.3"
description = ""
authors = ["Max Perraudin <max.perraudin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.3"
rich = "^9.4.0"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.4"
isort = "^5.6.4"
pytest = "^6.2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
